<resources>
    <string name="app_name">Telemetry</string>
    <string name="bluetooth">BT On/Off</string>
    <string name="coordinates">Coordinates:    </string>
    <string name="enable_discov">Enable Discoverable</string>
    <string name="get_location">Get Location</string>
    <string name="discover">Discover</string>
    <string name="start_connection">Start Connection</string>
    <string name="enter_text">Enter Text</string>
    <string name="send">Send</string>
    <string name="incoming_message">Incoming Message</string>
    <string name="prompt_email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in_short">Sign In Short</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_items">Add items to database</string>
    <string name="enter_value">Enter a value</string>
    <string name="add_database">Add to database</string>


</resources>

    <!-- android:textStyle="bold" -->

