<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button_gps"
        android:layout_width="92dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:text="@string/get_location"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEnableDisable_Discoverable"
        app:layout_constraintEnd_toStartOf="@+id/gps_text"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />


    <TextView
        android:id="@+id/gps_text"
        android:layout_width="208dp"
        android:layout_height="31dp"
        android:layout_below="@+id/button_gps"
        android:layout_marginTop="16dp"
        android:focusable="true"
        android:gravity="start"
        android:longClickable="true"
        android:text="@string/coordinates"
        android:textIsSelectable="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/lvNewDevices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/btnEnableDisable_Discoverable"
        android:layout_width="155dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:onClick="button_discoverable"
        android:text="@string/enable_discov"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <Button
        android:id="@+id/btnFindUnpairedDevices"
        android:layout_width="91dp"
        android:layout_height="31dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="btnDiscover"
        android:text="@string/discover"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/lvNewDevices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toEndOf="@+id/btnEnableDisable_Discoverable"
        app:layout_constraintTop_toBottomOf="@+id/gps_text"
        app:layout_constraintVertical_bias="0.0" />

    <ListView
        android:id="@+id/lvNewDevices"
        android:layout_width="189dp"
        android:layout_height="133dp"
        android:layout_below="@+id/btnStartConnection"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEnableDisable_Discoverable" />

    <Button
        android:id="@+id/btnStartConnection"
        android:layout_width="95dp"
        android:layout_height="41dp"
        android:layout_below="@+id/btnFindUnpairedDevices"
        android:layout_marginTop="49dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/start_connection"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toStartOf="@+id/lvNewDevices"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnFindUnpairedDevices"
        app:layout_constraintVertical_bias="0.46" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="132dp"
        android:layout_height="47dp"
        android:layout_below="@+id/lvNewDevices"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="24dp"
        android:hint="@string/enter_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lvNewDevices"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="73dp"
        android:layout_height="30dp"
        android:layout_below="@+id/lvNewDevices"
        android:background="@color/colorPrimaryDark"
        android:text="@string/send"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/incomingMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/incomingMessage"
        android:layout_width="256dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:focusable="true"
        android:gravity="start"
        android:hint="@string/incoming_message"
        android:textIsSelectable="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/email"
        android:layout_width="276dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.311"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_sign_out_button"
        app:layout_constraintVertical_bias="0.021">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="278dp"
        android:layout_height="41dp"
        android:hint="@string/password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.655">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/sign_in"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/email_sign_out_button"
        app:layout_constraintHorizontal_bias="0.661"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incomingMessage" />

    <Button
        android:id="@+id/email_sign_out_button"
        style="?android:textAppearanceSmall"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/sign_out"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incomingMessage" />

    <EditText
        android:id="@+id/add_new_var"
        android:layout_width="278dp"
        android:layout_height="45dp"
        android:layout_marginBottom="132dp"
        android:ems="10"
        android:hint="@string/enter_value"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="1.0" />

    <Button

        android:id="@+id/btnAddNewVar"
        android:layout_width="156dp"
        android:layout_height="56dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/add_database"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_new_var"
        app:layout_constraintVertical_bias="0.21" />


</androidx.constraintlayout.widget.ConstraintLayout>